--- a/src/css/Base.css
+++ b/src/css/Base.css
@@ -32,3 +32,18 @@
 	-webkit-box-sizing:border-box;
 }
 
+.base-round-x-box {
+	width:50px;
+	height:50px;
+	border-radius:15px;
+	border:1px solid #333;
+	font-size:70px;
+	color:#333;
+	position:relative;
+	padding:0;
+}
+
+.base-center-text {
+	text-align: center;
+}
+
