added some changes before a larger functionality addition

--- a/src/css/TopControl.css
+++ b/src/css/TopControl.css
@@ -2,9 +2,9 @@
 	position:absolute;
 	right:0;
 	top:0;
-	border:1px solid grey;
 	height:100px;
 	width:300px;
+	padding-top:20px;
 }
 
 .horizontal-list {
