--- a/src/css/Mode.css
+++ b/src/css/Mode.css
@@ -29,6 +29,90 @@
 	padding-left:20px;
 }
 
+#image-input {
+	margin-left:20px;
+	margin-top:20px;
+	border:2px solid black;
+	width:300px;
+	height:35px;
+	display:inline-block;
+	position:relative;
+}
+
+#image-heading {
+	margin-left:20px;
+	margin-top:20px;
+	text-decoration: underline;
+	color:#333;
+}
+
+#image-save {
+	background:#fff;
+	display:block;
+	margin-top:20px;
+	margin-left:20px;
+}
+
+#image-preview {
+	width:200px;
+	height:200px;
+	position:relative;
+	display:block;
+	margin-left:20px;
+	margin-top:20px;
+	border:2px solid orange;
+}
+
+#image-preview h3 {
+	margin-top:30%;
+}
+
+#image-input {
+	margin-left:20px;
+	margin-top:20px;
+	border:2px solid black;
+	width:300px;
+	height:35px;
+	display:inline-block;
+	position:relative;
+}
+
+#image-heading {
+	margin-left:20px;
+	margin-top:20px;
+	text-decoration: underline;
+	color:#333;
+}
+
+#video-heading {
+	margin-left:20px;
+	margin-top:20px;
+	text-decoration: underline;
+	color:#333;
+}
+
+#video-save {
+	background:#fff;
+	display:block;
+	margin-top:20px;
+	margin-left:20px;
+}
+
+#video-preview {
+	width:200px;
+	height:200px;
+	position:relative;
+	display:block;
+	margin-left:20px;
+	margin-top:20px;
+	border:2px solid orange;
+}
+
+#video-preview h3 {
+	margin-top:30%;
+}
+
+
 label {
 	display:block;
 	padding:5px;
