--- a/src/css/Shapes.css
+++ b/src/css/Shapes.css
@@ -1,3 +1,9 @@
+.shape-spacer {
+	width:100%;
+	height:100px;
+	font-size:90px;
+}
+
 .triangle {
   height: 0;
   width: 0;
@@ -5,4 +11,26 @@
   border-right: 100px solid transparent;
   border-bottom: 100px solid transparent;
   border-top: 100px solid transparent;
+  position:relative;
+  display:inline-block;
+  margin-left:10px;
+}
+
+.square {
+	width:100px;
+	height:100px;
+	background-color:green;
+	position:relative;
+	display:inline-block;
+	margin-left:10px;
+}
+
+.circle {
+	width:100px;
+	height:100px;
+	background-color:blue;
+	border-radius:50px;
+	position:relative;
+	display:inline-block;
+	margin-left:10px;
 }
